syntax = "proto3";
package auth;
import "annotations.proto";

option go_package = "./proto";

service AuthService {
  rpc CheckUsers (CheckUsersRequest) returns (CheckUsersResponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }

  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/RefreshToken"
      body: "*"
    };
  }
}

message CheckUsersRequest {
  string login = 1;
  string password = 2;
}

message CheckUsersResponse {
  string message = 1;
  string token = 2;
  string tokenRefresh = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RefreshTokenResponse {
  string token = 1;
}
